--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "",
+  "homepage": "https://deeeluxe.github.io/pomodoro-clock-latest/",
   "name": "pomodoro-clock-latest",
   "version": "0.1.0",
   "private": true,
